// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marketplace AE should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 18400,
        "min": 24,
      },
      "sponsoredProducts": Object {
        "max": 18400,
        "min": 24,
      },
    },
    "countryCode": "AE",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Asia/Dubai",
  },
  "countryCode": "AE",
  "currency": "AED",
  "id": "A2VIGQ35RCS4UG",
  "name": "United Arab Emirates",
  "uri": "https://www.amazon.ae",
  "webServiceUri": "https://mws.amazonservices.ae",
}
`;

exports[`marketplace AU should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 7000,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 141000,
        "min": 10,
      },
    },
    "countryCode": "AU",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.jp/auth/o2/token",
      "authorizationUri": "https://apac.account.amazon.com/ap/oa",
      "code": "FE",
      "endpoint": "https://advertising-api-fe.amazon.com",
      "name": "Far East",
    },
    "timeZone": "Australia/Sydney",
  },
  "countryCode": "AU",
  "currency": "AUD",
  "id": "A39IBJ37TRP1C6",
  "name": "Australia",
  "uri": "https://www.amazon.com.au",
  "webServiceUri": "https://mws.amazonservices.com.au",
}
`;

exports[`marketplace BR should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "BR",
  "currency": "BRL",
  "id": "A2Q3Y263D00KWC",
  "name": "Brazil",
  "uri": "https://www.amazon.com.br",
  "webServiceUri": "https://mws.amazonservices.com",
}
`;

exports[`marketplace CA should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 4900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "CA",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.com/auth/o2/token",
      "authorizationUri": "https://www.amazon.com/ap/oa",
      "code": "NA",
      "endpoint": "https://advertising-api.amazon.com",
      "name": "North America",
    },
    "timeZone": "America/Los_Angeles",
  },
  "countryCode": "CA",
  "currency": "CAD",
  "id": "A2EUQ1WTGCTBG2",
  "name": "Canada",
  "uri": "https://www.amazon.ca",
  "webServiceUri": "https://mws.amazonservices.ca",
}
`;

exports[`marketplace CN should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "CN",
  "currency": "CNY",
  "id": "AAHKV2X7AFYLW",
  "name": "China",
  "uri": "https://www.amazon.cn",
  "webServiceUri": "https://mws.amazonservices.com.cn",
}
`;

exports[`marketplace DE should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 3900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "DE",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Europe/Paris",
  },
  "countryCode": "DE",
  "currency": "EUR",
  "id": "A1PA6795UKMFR9",
  "name": "Germany",
  "uri": "https://www.amazon.de",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace ES should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 3900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "ES",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Europe/Paris",
  },
  "countryCode": "ES",
  "currency": "EUR",
  "id": "A1RKKUPIHCS9HS",
  "name": "Spain",
  "uri": "https://www.amazon.es",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace FR should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 3900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "FR",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Europe/Paris",
  },
  "countryCode": "FR",
  "currency": "EUR",
  "id": "A13V1IB3VIYZZH",
  "name": "France",
  "uri": "https://www.amazon.fr",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace GB should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 3100,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "UK",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Europe/London",
  },
  "countryCode": "GB",
  "currency": "GBP",
  "id": "A1F83G8C2ARO7P",
  "name": "United Kingdom",
  "uri": "https://www.amazon.co.uk",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace IN should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "IN",
  "currency": "INR",
  "id": "A21TJRUUN4KGV",
  "name": "India",
  "uri": "https://www.amazon.in",
  "webServiceUri": "https://mws.amazonservices.in",
}
`;

exports[`marketplace IT should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 3900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "DE",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.uk/auth/o2/token",
      "authorizationUri": "https://eu.account.amazon.com/ap/oa",
      "code": "EU",
      "endpoint": "https://advertising-api-eu.amazon.com",
      "name": "Europe",
    },
    "timeZone": "Europe/Paris",
  },
  "countryCode": "IT",
  "currency": "EUR",
  "id": "APJ6JRA9NG5V4",
  "name": "Italy",
  "uri": "https://www.amazon.it",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace JP should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 776000,
        "min": 1000,
      },
      "sponsoredProducts": Object {
        "max": 10000000,
        "min": 200,
      },
    },
    "countryCode": "JP",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.co.jp/auth/o2/token",
      "authorizationUri": "https://apac.account.amazon.com/ap/oa",
      "code": "FE",
      "endpoint": "https://advertising-api-fe.amazon.com",
      "name": "Far East",
    },
    "timeZone": "Asia/Tokyo",
  },
  "countryCode": "JP",
  "currency": "JPY",
  "id": "A1VC38T7YXB528",
  "name": "Japan",
  "uri": "https://www.amazon.co.jp",
  "webServiceUri": "https://mws.amazonservices.jp",
}
`;

exports[`marketplace MX should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "MX",
  "currency": "MXN",
  "id": "A1AM78C64UM0Y8",
  "name": "Mexico",
  "uri": "https://www.amazon.com.mx",
  "webServiceUri": "https://mws.amazonservices.com.mx",
}
`;

exports[`marketplace NL should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "NL",
  "currency": "EUR",
  "id": "A1805IZSGTT6HS",
  "name": "Netherlands",
  "uri": "https://www.amazon.nl",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace SG should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "SG",
  "currency": "SGD",
  "id": "A19VAU5U5O7RUS",
  "name": "Singapore",
  "uri": "https://www.amazon.sg",
  "webServiceUri": "https://mws-fe.amazonservices.com",
}
`;

exports[`marketplace TR should match snapshot 1`] = `
AmazonMarketplace {
  "countryCode": "TR",
  "currency": "TRY",
  "id": "A33AVAJ2PDY3EV",
  "name": "Turkey",
  "uri": "https://www.amazon.com.tr",
  "webServiceUri": "https://mws-eu.amazonservices.com",
}
`;

exports[`marketplace US should match snapshot 1`] = `
AmazonMarketplace {
  "advertising": Object {
    "bids": Object {
      "sponsoredBrands": Object {
        "max": 4900,
        "min": 10,
      },
      "sponsoredProducts": Object {
        "max": 100000,
        "min": 2,
      },
    },
    "countryCode": "US",
    "region": AmazonMarketplaceAdvertisingRegion {
      "accessTokenUri": "https://api.amazon.com/auth/o2/token",
      "authorizationUri": "https://www.amazon.com/ap/oa",
      "code": "NA",
      "endpoint": "https://advertising-api.amazon.com",
      "name": "North America",
    },
    "timeZone": "America/Los_Angeles",
  },
  "countryCode": "US",
  "currency": "USD",
  "id": "ATVPDKIKX0DER",
  "name": "United States",
  "uri": "https://www.amazon.com",
  "webServiceUri": "https://mws.amazonservices.com",
}
`;
